--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,15 @@
+
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
+  ],
+  "packageRules": [
+    {
+      "description": "Saturday at 9am",
+      "timezone": "Australia/Sydney",
+      "schedule": ["00 1 * * 6"]
+
+    }
   ]
 }
