--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "typer (>=0.16.0,<0.17.0)",
-    "rich (>=14.1.0,<15.0.0)"
+    "rich (>=14.1.0,<15.0.0)",
+    "pytest (>=8.4.1,<9.0.0)"
 ]
 
 
